tests/src/frontend/typechecking/invalid/late_static12.sk
base class Foo {
  static fun abs(): void;
  deferred static fun broken(): void {
    Foo::abs()
  }
}
